Add task1.ipynb. task1.ipynb = task1.py

--- a/task1.ipynb
+++ b/task1.ipynb
@@ -109,64 +109,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "МЕНЮ\n",
+      "\n",
+      "1. Создать очередь с приоритетом заполненную псевдослучайными числами.\n",
+      "2. Создать пустую очередь \n",
+      "3. Добавить новый элемент.\n",
+      "4. Добавить несколько элементов.\n",
+      "5. Удалить элемент с наивысшем приоритетом.\n",
+      "6. Заменить элемент (т.е внести новый элемент и удалить элемент с наивысшем приоритетом).\n",
+      "7. Вывести на экран очередь с приоритетом.\n",
+      "8. Выйти.\n",
+      "\n",
+      "\n",
+      "Введите номер пункта меню: 1\n",
+      "\n",
+      "Введите размер очереди (целое положительно число): 10\n",
+      "Очередь с приоритетом имеет вид: \n",
+      "[3, 8, 6, 43, 25, 47, 48, 65, 95, 39]\n",
+      "Введите номер пункта меню: 3\n",
+      "Введите целое положительное число: 5\n",
+      "Элемент успешно добавлен!\n",
+      "Введите номер пункта меню: 5\n",
+      "\n",
+      "Элемент \"3\" успешно удален\n",
+      "Введите номер пункта меню: 6\n",
+      "Введите целове положительное число: 17\n",
+      "Элемент успешно добавлен!\n",
+      "Введите номер пункта меню: 7\n",
+      "[6, 8, 17, 43, 25, 47, 48, 65, 95, 39]\n",
+      "Введите номер пункта меню: 8\n",
+      "До свидания!\n"
+     ]
+    }
+   ],
    "source": [
-    "def get_random_values(size, minimum = 1, maximum = 100):\n",
-    "    return [random.randint(minimum, maximum) for _ in range(size)]\n",
-    "\n",
     "def user_interface():\n",
     "    print('МЕНЮ\\n')\n",
-    "    print('1. Создать очередь с приоритетом.')\n",
-    "    print('2. Добавить новый элемент.')\n",
-    "    print('3. Удалить элемент с наивысшем приоритетом.')\n",
-    "    print('4. Вывести на экран очередь с приоритетом.')\n",
-    "    print('5. Заменить элемент (т.е внести новый элемент и удалить элемент с наивысшем приоритетом).')\n",
-    "    print('6. Добавить несколько элементов.')\n",
-    "    print('7. Выйти.')\n",
+    "    print('1. Создать очередь с приоритетом заполненную псевдослучайными числами.')\n",
+    "    print('2. Создать пустую очередь ')\n",
+    "    print('3. Добавить новый элемент.')\n",
+    "    print('4. Добавить несколько элементов.')\n",
+    "    print('5. Удалить элемент с наивысшем приоритетом.')\n",
+    "    print('6. Заменить элемент (т.е внести новый элемент и удалить элемент с наивысшем приоритетом).')\n",
+    "    print('7. Вывести на экран очередь с приоритетом.')\n",
+    "    print('8. Выйти.')\n",
     "    print('\\n')\n",
     "    \n",
     "    queue = 'None'\n",
     "    while True:\n",
-    "        try:\n",
-    "            number = int(input('Введите номер пункта меню: '))\n",
-    "        except ValueError:\n",
-    "            print('Вы ввели не верный номер. Попробуйте еще раз')\n",
-    "            continue\n",
+    "        number = enter_element('Введите номер пункта меню: ',\n",
+    "                               'Введенного номера нет в МЕНЮ. Попробуйте еще раз.',\n",
+    "                               'Вы ввели не верный номер. Попробуйте еще раз')\n",
     "\n",
     "        if number == 1:\n",
     "            queue = create_queue()\n",
     "        elif number == 2:\n",
-    "            if queue == 'None':\n",
-    "                print('\\nОчерь не создана! Создайте очередь с приоритетом.')\n",
-    "            else:\n",
-    "                push_element(queue)  \n",
+    "            queue = create_empty_queue()\n",
     "        elif number == 3:\n",
-    "            if queue == 'None':\n",
-    "                print('\\nОчерь не создана! Создайте очередь с приоритетом.')\n",
-    "            else:\n",
-    "                pop_element(queue) \n",
+    "            wrapper(queue, push_element)\n",
     "        elif number == 4:\n",
-    "            if queue == 'None':\n",
-    "                print('\\nОчерь не создана! Создайте очередь с приоритетом.')\n",
-    "            else:\n",
-    "                queue.print()\n",
+    "            wrapper(queue, push_elements)\n",
     "        elif number == 5:\n",
-    "            if queue == 'None':\n",
-    "                print('\\nОчерь не создана! Создайте очередь с приоритетом.')\n",
-    "            else:\n",
-    "                replace_element(queue)\n",
+    "            wrapper(queue, pop_element)\n",
     "        elif number == 6:\n",
-    "            if queue == 'None':\n",
-    "                print('\\nОчерь не создана! Создайте очередь с приоритетом.')\n",
-    "            else:\n",
-    "                push_elements(queue)\n",
-    "        elif number == 7: \n",
+    "            wrapper(queue, replace_element)\n",
+    "        elif number == 7:\n",
+    "            wrapper(queue, print_queue)\n",
+    "        elif number == 8: \n",
     "            print('До свидания!')\n",
+    "            return queue\n",
     "            break\n",
     "        else:\n",
     "            print('Введенного номера нет в МЕНЮ. Попробуйте еще раз.')\n",
+    "\n",
+    "def enter_element(text_input,\n",
+    "                  text_else='Введённое число не соответствует заданному диапазону. Попробуйте еще раз...',\n",
+    "                  text_except='Вы ввели не целое число. Попробуйте еще раз...'):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            element = int(input(text_input))\n",
+    "            if 0 < element:\n",
+    "                return element\n",
+    "            else:\n",
+    "                print(text_else)\n",
+    "        except ValueError:\n",
+    "            print(text_except)\n",
+    "\n",
+    "def wrapper(queue, target):\n",
+    "  if queue == 'None':\n",
+    "    print('\\nОчерь не создана! Создайте очередь с приоритетом.')\n",
+    "  else:\n",
+    "    target(queue)\n",
     "\n",
     "def create_queue():\n",
     "    size = enter_element('\\nВведите размер очереди (целое положительно число): ')\n",
@@ -179,8 +219,15 @@
     "    \n",
     "    return queue\n",
     "\n",
+    "def create_empty_queue():\n",
+    "    queue = PriorityQueue([])\n",
+    "    print('Очередь с приоритетом имеет вид: ')\n",
+    "    queue.print()\n",
+    "\n",
+    "    return queue\n",
+    "\n",
     "def push_element(queue):\n",
-    "    element = enter_element('Введите целове положительное число: ')\n",
+    "    element = enter_element('Введите целое положительное число: ')\n",
     "    queue.push(element)\n",
     "    print('Элемент успешно добавлен!')\n",
     "\n",
@@ -200,16 +247,13 @@
     "    size = enter_element('Сколько добавляем элементов?: ')\n",
     "    [push_element(queue) for _ in range(size)]\n",
     "\n",
-    "def enter_element(text_input):\n",
-    "    while True:\n",
-    "        try:\n",
-    "            element = int(input(text_input))\n",
-    "            if 0 < element:\n",
-    "                return element\n",
-    "            else:\n",
-    "                print('Введённое число не соответствует заданному диапазону. Попробуйте еще раз...')\n",
-    "        except ValueError:\n",
-    "            print('Вы ввели не целое число. Попробуйте еще раз...')"
+    "def print_queue(queue):\n",
+    "    queue.print()\n",
+    "\n",
+    "def get_random_values(size, minimum = 1, maximum = 100):\n",
+    "    return [random.randint(minimum, maximum) for _ in range(size)]\n",
+    "\n",
+    "queue = user_interface()"
    ]
   },
   {
@@ -266,13 +310,6 @@
    "source": [
     "user_interface()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -291,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
